// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled presets disabledCss should match snapshot 1`] = `
{
  "color": "text-disabled",
  "cursor": "not-allowed",
}
`;

exports[`Disabled presets disabledWithBackgroundCss should match snapshot 1`] = `
{
  "backgroundColor": "muted",
  "color": "text-disabled",
  "cursor": "not-allowed",
}
`;
